[build-system]
requires = [
    "setuptools >= 61",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

# PEP 621: Storing project metadata in pyproject.toml
# https://peps.python.org/pep-0621/
[project]
name = "aioqbt"
description = "API library for qBittorrent with asyncio"
readme = "README.md"
authors = [
    { name = "Aaron Tsang" },
]
license = { text = "MIT" }
keywords = ["qbittorrent", "asyncio"]
dynamic = ["version"]
requires-python = ">=3.7"
classifiers = [
    # classifier list on https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Typing :: Typed",
]

# dependencies updated on 25 Sep 2022
dependencies = [
    "aiohttp >= 3.8.1, < 4",
    "typing-extensions >= 4.0.1, < 5"
]

# optional-dependencies is a table whose values are lists of PEP 508 strings
[project.optional-dependencies]
dev = [
    "mypy ~= 0.961, < 1",
    "black ~= 22.6.0",
    "isort ~= 5.10.1",
]
docs = [
    "sphinx ~= 5.1.0",
    "sphinx-rtd-theme ~= 1.0.0",
]
test = [
    "pytest ~= 7.1.2, < 8",
    "pytest-asyncio ~= 0.19.0, < 1",
    "coverage[toml] ~= 6.4.4",
]

[project.urls]
Homepage = "https://github.com/tsangwpx/aioqbt"
Documentation = "https://aioqbt.readthedocs.io/en/latest/"
Source = "https://github.com/tsangwpx/aioqbt"

[tool.setuptools.dynamic]
version = { attr = "aioqbt.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
warn_unused_configs = true
python_version = "3.7"
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
no_implicit_optional = true
sqlite_cache = true
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.coverage.report]
exclude_lines = [
    "\\bpragma: no cover\\b",
    "^\\s*raise (AssertionError|NotImplementedError)\\b",
    "^\\s*return (NotImplemented)\\b",
    "^\\s*(assert True|pass|\\.\\.\\.)",
    "^\\s*if TYPE_CHECKING:",
    "^\\s*def __repr__",
]
omit = [
    "tests/*"
]
